Fix login styling and commit modal title spacing

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -11,6 +11,7 @@
 
 #login{
   background: rgba(50, 50, 50, 0.7);
+  width: 40%;
   margin: auto;
   padding: 10px;
 }
@@ -66,6 +67,6 @@ label {
 }
 
 .form-input{
-  width: 100%;
+  width: 110%;
   margin: 0 auto;
 }
