--- a/app/assets/stylesheets/post_show.css.scss
+++ b/app/assets/stylesheets/post_show.css.scss
@@ -51,7 +51,3 @@
   font-family: 'Gotham';
   font-style: bold;
 }
-
-.blog-header-modal{
-  margin-bottom: 20px;
-}
